--- a/react-notes/src/App.css
+++ b/react-notes/src/App.css
@@ -38,7 +38,9 @@
 } */
 
 h2 {
-  position: absolute; top: 0px; left: 25px;
+  position: absolute; 
+  top: 0px; 
+  left: 25px;
 }
 
 .welcome-body {
@@ -46,12 +48,22 @@ h2 {
 }
 
 .addNote{
-  position: absolute; bottom: 25px; right: 25px;
+  position: absolute; 
+  bottom: 25px; 
+  right: 25px;
 }
 
 .noteContainer{
   display: flex;
   flex-direction: column;
+}
+
+.notesList{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 50%;
+  left: 25px;
 }
 
 .create {
